<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/add"
        android:showAsAction="always"
        android:title="@string/add"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/delete"
        android:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_set_as"
        android:showAsAction="never"
        android:title="@string/set_as"/>
    <item
        android:id="@+id/menu_share"
        android:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/menu_export_to_gallery"
        android:showAsAction="never"
        android:title="@string/export_to_gallery"/>

</menu>